# tracespec

./: .gitignore  DEVELOPMENT.md  MIGRATION_SUMMARY.md  README.md  UI_README.md  app.py  dev_server.py  pyproject.toml  requirements.json  requirements.txt  run_dev.py  test_repo_loading.py
templates/: base.html  index.html  requirement_detail.html  requirement_diff.html  requirement_form.html  requirements_list.html
test/: test_utils.py
test/data/: requirements_v1.csv  requirements_v2.csv  requirements_v3.csv
tracespec/: app.py  ingest.py  main.py  utils.py
tracespec/static/: README.md
tracespec/templates/: base.html  index.html  layout.html  requirements_list.html
